Fixing horizontal scroll

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,6 @@
 .header {
     background-color: #2a3234;
+    margin-bottom: 10px;
 }
 .app-logo {
     width: 10%;
